--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XO</title>
     <link href="styles.css" rel="stylesheet">
-    <script src="index.js" defer></script>
+    
 </head>
 <body>
-    
+    <script src="index.js"></script>
 </body>
 </html>
